--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://mhmasum.com/'
+baseURL = 'https://mhmasum0.github.io/mhmasum.com/'
 languageCode = 'en-us'
 title = 'Mahmudul Hasan'
 
